# rm_auto_aim

./: .gitignore  CMakeLists.txt  README.md  package.xml
.github/workflow/: ros_ci.yml
.github/workflows/: ros_ci.yml
armor_detector/: CMakeLists.txt  README.md  package.xml
armor_detector/config/: armor_detector.yaml  detector.yaml  mv_camera.yaml  rs_camera.yaml
armor_detector/include/armor_detector/: armor.hpp  armor_detector.hpp  armor_detector_node.hpp  depth_processor.hpp  detector.hpp  detector_node.hpp  number_classifier.hpp  pnp_solver.hpp
armor_detector/launch/: armor_detector.launch.py
armor_detector/model/: fc.onnx  label.txt  mlp.onnx  model.onnx
armor_detector/script/: hls.ipynb  hsv.ipynb
armor_detector/src/: armor_detector.cpp  armor_detector_node.cpp  base_detector_node.cpp  depth_processor.cpp  detector.cpp  detector_node.cpp  number.txt  number_classifier.cpp  pnp_solver.cpp  rgb_detector_node.cpp  rgbd_detector_node.cpp
armor_detector/test/: test_armor_detector.cpp  test_classifier.cpp  test_node.cpp  test_node_startup.cpp  test_number_cls.cpp
armor_processor/: CMakeLists.txt  README.md  package.xml
armor_processor/config/: armor_processor.yaml  processor.yaml
armor_processor/include/armor_processor/: armor_processor_node.hpp  kalman_filter.hpp  processor_node.hpp  spin_detector.hpp  spin_observer.hpp  tracker.hpp
armor_processor/launch/: armor_processor.launch.py  processor.launch.py
armor_processor/src/: armor_processor_node.cpp  extended_kalman_filter.cpp  kalman_filter.cpp  processor_node.cpp  spin_detector.cpp  spin_observer.cpp  tracker.cpp
armor_processor/test/: test_kalman_filter.cpp  test_tracker.cpp
armor_tracker/: package.xml
armor_tracker/include/armor_tracker/: extended_kalman_filter.hpp  tracker.hpp  tracker_node.hpp
armor_tracker/src/: extended_kalman_filter.cpp  tracker.cpp  tracker_node.cpp
auto_aim_bringup/: CMakeLists.txt  package.xml
auto_aim_bringup/config/: default.yaml
auto_aim_bringup/launch/: auto_aim.launch.py
auto_aim_interfaces/: CMakeLists.txt  package.xml
auto_aim_interfaces/msg/: Armor.msg  ArmorDataArray.msg  DebugArmor.msg  DebugLight.msg  LightDataArray.msg  SpinInfo.msg  Target.msg  TrackerInfo.msg
config/: rm_auto_aim.yaml
include/rm_auto_aim/: armor_detector.hpp  rm_auto_aim.hpp
launch/: rm_auto_aim.launch.py
rm_auto_aim/: CMakeLists.txt  package.xml
rm_auto_aim/config/: default.yaml
rm_auto_aim/launch/: auto_aim.launch.py  rm_auto_aim.launch.py
script/: hsv.ipynb
src/: armor_detector.cpp  rm_auto_aim.cpp
test/: test_armor_detector.cpp
