<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rm_auto_aim</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="chen.junn@outlook.com">chenjun</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>armor_detector</depend>
  <depend>armor_processor</depend>
  <depend>auto_aim_interfaces</depend>
  <depend>auto_aim_bringup</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
